# Phira-Record-Player

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: AboutView.vue  App.vue  RecordView.vue  RenderView.vue  TasksView.vue  main.ts  model.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  preview.rs  record.rs  render.rs  task.rs
src/router/: index.ts
tools/: parse_phirarec.py
