[package]
name = "phira-render"
version = "0.1.0"
description = "Phira render"
authors = ["Mivik"]
license = ""
repository = ""
default-run = "phira-render"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-message", "system-tray", "shell-open", "fs-read-file", "protocol-asset", "dialog-open"] }

anyhow = { version = "1.0.70", features = ["backtrace"] }
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "b2eab29", default-features = false }
prpr = { git = "https://github.com/TeamFlos/phira", package = "prpr", branch = "main" }
prpr-l10n = { git = "https://github.com/TeamFlos/phira", package = "prpr-l10n", branch = "main" }
# prpr = { path = "../../phira/prpr" }

sasa = { git = "https://github.com/Mivik/sasa" }
serde_yaml = "0.9"
tokio = { version = "*", features = ["process"] }
tracing = "0.1.37"
tempfile = "3.8.0"
chrono = "0.4.28"
open = "5.0.0"
fs4 = { version = "0.6.6" }
ruzstd = "0.8"
flate2 = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 2
# debug = 1

[profile.dev.package."*"]
opt-level = 2

# windows crate is massive - reduce optimization to avoid rustc stack overflow
[profile.dev.package.windows]
opt-level = 0
codegen-units = 256

[profile.dev.package.tauri-build]
opt-level = 0
codegen-units = 256
